Adding swipe effect

--- a/button-effects/index.html
+++ b/button-effects/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Button Effects</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="rotating-style.css">
+    <link rel="stylesheet" href="swipe-style.css">
 </head>
 <body>
-    <a href="#">Hover me!</a>
-    
+    <div class="container">
+        <a class="rotating-effect" href="#">Hover Me!</a>   
+        <a class="swipe-effect" href="#">Hover Me!</a>   
+    </div>
 </body>
 </html>
