Adding text effects

--- a/button-effects/index.html
+++ b/button-effects/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="rotating-style.css">
     <link rel="stylesheet" href="swipe-style.css">
+    <link rel="stylesheet" href="text-effect.css">
 </head>
 <body>
     <div class="container">
         <a class="rotating-effect" href="#">Hover Me!</a>   
         <a class="swipe-effect" href="#">Hover Me!</a>   
+        <a class="text-effect" href="#">Hover Me!</a>   
     </div>
 </body>
 </html>
