Adding nice swipe effect

--- a/button-effects/index.html
+++ b/button-effects/index.html
@@ -13,8 +13,9 @@
 <body>
     <div class="container">
         <a class="rotating-effect" href="#">Hover Me!</a>   
-        <a class="swipe-effect" href="#">Hover Me!</a>   
-        <a class="text-effect" href="#">Hover Me!</a>   
+        <a class="swipe-effect swipe-left-right" href="#">Hover Me!</a>   
+        <a class="text-effect" href="#">Hover Me!</a>
+        <a class="swipe-effect swipe-top-bottom" href="#">Hover Me!</a>   
     </div>
 </body>
 </html>
