--- a/button-effects/index.html
+++ b/button-effects/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="rotating-style.css">
     <link rel="stylesheet" href="swipe-style.css">
-    <link rel="stylesheet" href="text-effect.css">
+    <link rel="stylesheet" href="text-style.css">
+    <link rel="stylesheet" href="glowing-style.css">
 </head>
 <body>
     <div class="container">
         <a class="rotating-effect" href="#">Hover Me!</a>   
         <a class="swipe-effect swipe-left-right" href="#">Hover Me!</a>   
         <a class="text-effect" href="#">Hover Me!</a>
-        <a class="swipe-effect swipe-top-bottom" href="#">Hover Me!</a>   
+        <a class="swipe-effect swipe-top-bottom" href="#">Hover Me!</a>
+        <a class="glowing-effect" href="#">Hover Me!</a>   
     </div>
 </body>
 </html>
