Adding page title and swapping layers effect

--- a/button-effects/index.html
+++ b/button-effects/index.html
@@ -10,14 +10,17 @@
     <link rel="stylesheet" href="swipe-style.css">
     <link rel="stylesheet" href="text-style.css">
     <link rel="stylesheet" href="glowing-style.css">
+    <link rel="stylesheet" href="swapping-layers-style.css">
 </head>
 <body>
     <div class="container">
-        <a class="rotating-effect" href="#">Hover Me!</a>   
-        <a class="swipe-effect swipe-left-right" href="#">Hover Me!</a>   
-        <a class="text-effect" href="#">Hover Me!</a>
-        <a class="swipe-effect swipe-top-bottom" href="#">Hover Me!</a>
-        <a class="glowing-effect" href="#">Hover Me!</a>   
+        <h1 class="title">Hover the buttons bellow...</h1>
+        <a class="rotating-effect" href="#">Rotating</a>   
+        <a class="swipe-effect swipe-left-right" href="#">Swiping</a>   
+        <a class="text-effect" href="#">Spreading</a>
+        <a class="swipe-effect swipe-top-bottom" href="#">Swiping from top</a>
+        <a class="glowing-effect" href="#">Glowing</a>
+        <a class="swapping-layers" href="#"></a>   
     </div>
 </body>
 </html>
